--- a/index.html
+++ b/index.html
@@ -27,100 +27,25 @@
 				</section>
 				<section>
 
-					<h2>Saint Louis, MO</h2>
-					<p>My preschool years were spent crawling around in a four-family flat on Arsenal, half a block east of Grand and Tower Grove Park. I do have some memories from these years, including hot summer nights with the windows open and a fan on high, trying to piece together dinner that didn't involve turning on the oven or stove.</p>
+					<h2>Lord of the Rings: The Two Towers - King Theoden's speech</h2>
+					<p>By far, King theoden is the character I resonate with most in all of the Lord of the Rings.  I believe King Theoden has the biggest character arc and development of ALL the characters.  When I trained for the army, in my mind I prepared for a fight against the odds.  A fight where there was no victory for myself.  This scene helped me confront and make peace with that idea.</p>
 					<iframe width="560" height="315" src="https://www.youtube.com/embed/POdknqszMDY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</section>
 				<section>
 
-					<h2>Fenton, MO</h2>
-					<p>From age 5 to 18 I live in a suburb on the far southrn edge of the St. Louis metropolitan area. It was just what you probably expect: subdivisions, baseball teams, big box stores, and lots of TV. Most of my fond memories from these years involve my family. Pictured here are my brother, mother, and grandfather.</p>
-					<figure>
-						<img src="images/family.jpg" alt="" />
-						<figcaption></figcaption>
-					</figure>
+                    
+					<h2>The incredibles - No Capes!</h2>
+					<p>What a brillant movie for lots of reasons.  But this scene in short order delivers comedy and depth of the characters which helped me care more about the main character at this moment, Robert Parr.  I think here is where the Edna Mode character stole the show. </p>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/M68ndaZSKa8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</section>
 				<section>
 
-					<h2>Kirksville, MO</h2>
-					<p>From 2000-2005 I was an undergraduate at Truman State University, a little-known but quite wonderful public liberal arts school in northern Missouri, a few minutes drive from the Iowa border. The permanent population of Kirksville was roughly 15,000, while the school had an enrollment of 6,000. Needless to say, it wasn't much of a traditional college town. But the town had character, and was small enough to make a car almost completely unecessary on a day-to-day basis.</p>
-					<figure>
-						<img src="images/truman.jpg" alt="Kirk Memorial on the campus of Truman State University" />
-						<figcaption>Kirk Memorial on the campus of Truman State University</figcaption>
-					</figure>
+					<h2>The Other Guys - I'm a peacock</h2>
+					<p>I did not see Mark Walburg as a comedy star, but I feel like he pulls it out nicely. Especially when a scene can become a meme like this scene becomes.</p>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/iV6539XsWrc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</section>
-				<section>
-					<a name="london"></a>
-					<h2>London, UK</h2>
-					<p>During my undergrad years, I spend 5 months studying in England. Technically, I lived in Hampton Wick, a southwestern suburb of London that sits along the Thames and is walking distance from Hampton Court Palace, home of Henry VIII.</p>
-					<figure>
-						<img src="images/london.jpg" alt="Westminster, as seen from the London Eye" />
-						<figcaption>Westminster, as seen from the London Eye</figcaption>
-					</figure>
-				</section>
-				<section>
-					<a name="allendale"></a>
-					<h2>Allendale, MI</h2>
-					<p>In the summer of 2003, I lived in this small town about halfway between Grand Rapids and Lake Michigan. Summers in Michagans are a dream, with their long days, relatively mild temps, and plenty of outdoor recreation at close access.</p>
-					<p>While there, I worked with students and faculty at Grand Valley State University working on mathematics research, the result of which is <a href="https://www.researchgate.net/publication/268894955_When_lines_go_bad_in_hyperspace">my only published research paper</a> to-date.</p>
-					<figure>
-						<img src="images/allendale.jpg" alt="The clock tower at Grand Valley State University in Allendale, MI" />
-						<figcaption>The clock tower at Grand Valley State University in Allendale, MI</figcaption>
-					</figure>
-				</section>
-				<section>
-					<a name="lincoln"></a>
-					<h2>Lincoln, NE</h2>
-					<p>I lived in Lincoln, Nebraska in the summer of 2005, preparing for graduate school, which would start that fall. I lived with about a dozen other math students in the dorms, which were otherwise empty (as was much of this college town).</p>
-					<figure>
-						<img src="images/lincoln.jpg" alt="Nebraska State Capitol building in Lincoln, NE" />
-						<figcaption>Nebraska State Capitol building in Lincoln, NE</figcaption>
-					</figure>
-				</section>
-				<section>
-					<a name="long-island"></a>
-					<h2>Long Island, NY</h2>
-					<p>From 2005 to 2008 I lived in a few towns on the north short of Long Island: Stony Brook, Port Jefferson, and Sound Beach. At the time, I was a graduate student at Stony Brook University. This part of Long Island is about 60 miles east of New York City (about 2 hours by train or car to Manhattan), but feels like a world away. The coastline is beautiful, and the east end of long island closely matches the expectations created by movies and literature of an idyllic, quaint stretch of small towns, farms, farm stands, and beaches.</p>
-					<figure>
-						<img src="images/stony-brook-beach.jpg" alt="Stony Brook Beach" />
-						<figcaption>Stony Brook Beach</figcaption>
-					</figure>
-					<figure>
-						<img src="images/sound-beach.jpg" alt="The author near his former him in Sound Beach, NY" />
-						<figcaption>The author near his former home in Sound Beach, NY</figcaption>
-					</figure>
-				</section>
-				<section>
-					<a name="stlouis-2"></a>
-					<h2>Saint Louis, MO</h2>
-					<p>We come to the present day. After leaving New York in 2008, I returned to St. Louis, this time planing my feet within the city limits for the first time. Over the years I lived in a few different parts of the city, including Dogtown and Old North, but I've spend the majority of my time in the city in the Cherokee / Jefferson area, at various apartments in Benton Park and Gravois Park.</p>
-					<figure>
-						<img src="images/cherokee.jpg" alt="Intersection of Cherokee and Jefferson in south St. Louis" />
-						<figcaption>Intersection of Cherokee and Jefferson in south St. Louis</figcaption>
-					</figure>
-				</section>
-				<aside>
-					<header>
-						<h3>Honrable Mentions</h3>
-					</header>
-					<section>
-						<h4>Germany</h4>
-						<p>Across two different trips, I've spent a total of 6 weeks in Germany. My first trip was a month-long backpacking excursion in 2003 that took my travel companion and I through most major regions of the country. We spent time in Heidelberg, Mahneim, Munich, Berlin, Hamburg, D&uuml;sseldorf, K&ouml;ln (Cologne), and Frankfurt.</p
-						<p>I returned in 2009 to spend two weeks visiting my friend and college roommate in Munich, where he was working as a physicist.</p>
-						<figure>
-							<img src="images/koln-germany.jpg" alt="K&ouml;lner Dom (Cologne Cathedral)" />
-							<figcaption>K&ouml;lner Dom (Cologne Cathedral)</figcaption>
-						</figure>
-					</section>
-					<section>
-						<h4>New York, NY</h4>
-						<p>I never occupied a residence in New York City, but I spend countless days in the city while living on Long Island. The days were an even mix of trips to the city to take classes at Columbia University (where my advisor had a visiting position), seeing live music, and visiting friends in Brooklyn and Queens.</p>
-						<figure>
-							<img src="images/nyc.jpg" alt="Manhattan, as viewed from the top of the Empire State Building" />
-							<figcaption>Manhattan, as viewed from the top of the Empire State Building</figcaption>
-						</figure>
-					</section>
-				</aside>
+                <p>Thanks for taking a look.  I hope check out these movies, if you haven't seen them before.</p>
+                <img src="JC.jpg" alt="Jackie Chan thumbs up"/> 
 			</article>
 		</main>
 
