CSS update245pm

--- a/index.html
+++ b/index.html
@@ -3,7 +3,21 @@
 	<head>
 
 		<title>Amanzi Umoya - My favorite movie scenes</title>
+        <style>
+            p {
+              padding: 10px;
+              border: 1px solid black;
+              margin: 25px 50px 75px 100px;
+              background-color: lightblue;
+            }
 
+            body {
+                background-color: darkgray;
+            }
+            p.center{
+                text-align: center;
+            }
+            </style>
 	</head>
 	<body>
 		<header>
@@ -47,7 +61,7 @@
                 
                 <section>
                     <h2> Deadpool - Pizza Delivery Guy</h2>
-                    <p>I have a man crush on Ryan Reyonds and love his portrayl of Deadpool. I appreciate the character development that get you on their side, to root for them.  They totally got me.</p>
+                    <p>I have a man crush on Ryan Reyonds and love his portrayl of Deadpool. I appreciate the character development that get you on their side, to root for them.  They totally got me from here on out.</p>
                     <div style="text-align:center"> 
                         <button onclick="playPause()">Play/Pause</button> 
                         <button onclick="makeBig()">Big</button>
@@ -85,7 +99,7 @@
                       
                       <p>Video courtesy of TM & © Disney / 20th Century Studios</p>
                 </section>
-                <p>Thanks for taking a look.  I hope check out these movies, if you haven't seen them before.</p>
+                <p class="center">Thanks for taking a look.  I hope check out these movies, if you haven't seen them before.</p>
                 <img src="JC.jpg" alt="Jackie Chan thumbs up"/> 
 			</article>
 		</main>
